objects/CVPosition__c.object
<CustomObject>
    <description>Position forming the Career History of this Candidate&apos;s CV or Resume</description>
    <fields>
        <fullName>CV__c</fullName>
        <description>Link to CV</description>
        <label>CV</label>
        <referenceTo>CurriculumVitae__c</referenceTo>
        <relationshipLabel>Career History</relationshipLabel>
        <relationshipName>CV_Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company that Candidate worked for during this position</description>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>CV_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Job description</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EmploymentType__c</fullName>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Experience</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date that this position ended</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndMonthYear__c</fullName>
        <formula>CASE( 
DAY( EndDate__c ), 
1, &quot; to Jan&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
2, &quot; to Feb&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
3, &quot; to Mar&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
4, &quot; to Apr&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
5, &quot; to May&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
6, &quot; to Jun&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
7, &quot; to Jul&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
8, &quot; to Aug&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
9, &quot; to Sep&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
10, &quot; to Oct&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
11, &quot; to Nov&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
12, &quot; to Dec&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)), 
&quot; to present&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Month Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthYearTest__c</fullName>
        <formula>TEXT(  StartDate__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MonthYearTest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Any project that this candidate has worked on</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>CV_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <picklist>
            <picklistValues>
                <fullName>Business Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA and I&amp;O Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewing Potential Developers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liaising with Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Tuning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Design and Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIA Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The role that this candidate assumed for this position</description>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>CV_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SkillsUsed__c</fullName>
        <globalPicklist>GlobalSkillSetValues</globalPicklist>
        <label>Skills Used</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date that this position started</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartMonthYear__c</fullName>
        <formula>CASE(
  DAY(StartDate__c),
  1, &quot;Jan&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  2, &quot;Feb&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  3, &quot;Mar&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  4, &quot;Apr&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  5, &quot;May&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  6, &quot;Jun&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  7, &quot;Jul&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  8, &quot;Aug&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  9, &quot;Sep&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  10, &quot;Oct&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  11, &quot;Nov&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c)),
  &quot;Dec&quot; + &apos; &apos; + TEXT(YEAR( StartDate__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Month Year</label>
        <type>Text</type>
    </fields>
    <label>CV Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>Company__c</columns>
        <columns>Description__c</columns>
        <columns>StartMonthYear__c</columns>
        <columns>EndMonthYear__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CVP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CV Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>